# PlotJuggler

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  COMPILE.md  README.md  conanfile.txt  flake.nix  package.xml  pixi.toml
.github/workflows/: codeql.yml  debian.yaml  macos.yaml  pre-commit.yaml  ros2-humble.yaml  ros2-jazzy.yaml  ros2-rolling.yaml  snap_core22.yaml  snap_core24.yaml  ubuntu.yaml  windows.yaml
cmake/: FindLZ4.cmake  FindZSTD.cmake  download_lz4.cmake  download_wasmtime.cmake  download_zstd.cmake  find_or_download_data_tamer.cmake  find_or_download_dependencies.cmake  find_or_download_lz4.cmake  find_or_download_wasmtime.cmake  find_or_download_zstd.cmake
installer/: config.xml
installer/io.plotjuggler.application/meta/: package.xml
pixi_jazzy/: pixi.toml
pixi_noetic/: pixi.toml
pixi_non_ros/: pixi.toml
pixi_ros/: pixi.toml
plotjuggler_app/: CMakeLists.txt  customtracker.cpp  customtracker.h  main.cpp  mainwindow.cpp  mainwindow.h  plotwidget.cpp  plotwidget.h  plotwidget_transforms.cpp  plugin_manager.cpp  plugin_manager.h  wasm_parser.cpp  wasm_parser.hpp
plotjuggler_base/include/PlotJuggler/: messageparser_base.h  plotdatabase.h  string_ref_sso.h  stringseries.h  timeseries.h
plotjuggler_base/src/: reactive_function.cpp  transform_function.cpp
plotjuggler_plugins/: CMakeLists.txt
plotjuggler_plugins/DataLoadMCAP/: CMakeLists.txt  dialog_mcap.cpp
plotjuggler_plugins/DataLoadParquet/: CMakeLists.txt
plotjuggler_plugins/DataStreamMQTT/: CMakeLists.txt
plotjuggler_plugins/DataStreamMQTT/cmake/: FindMOSQUITTO.cmake
plotjuggler_plugins/ParserProtobuf/: CMakeLists.txt  protobuf_parser.cpp
plotjuggler_plugins/ParserROS/: ros_parser.cpp  ros_parser.h
plotjuggler_plugins/ParserROS/rosx_introspection/: CMakeLists.txt
plotjuggler_plugins/ParserROS/rosx_introspection/src/: stringtree_leaf.cpp
plotjuggler_plugins/StatePublisherCSV/: publisher_csv.cpp
plotjuggler_plugins/ToolboxLuaEditor/: CMakeLists.txt
plotjuggler_plugins/ToolboxQuaternion/: quaternion_to_rpy.cpp
